# Dr.SheetSplit

./: .gitignore  LICENSE  README.md  RULE_ENGINE.md  package.json  pnpm-lock.yaml
.github/workflows/: release-build.yml
docs/superpowers/plans/: 2026-03-12-phase1-implementation-plan.md
docs/superpowers/specs/: 2026-03-12-excel-splitter-desktop-design.md  (+1 more)
scripts/: prepare_bundled_python.py
src/: App.vue  main.ts
src-tauri/: ._target  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.local.json  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: ._AppIcon.icns
src-tauri/python/: transform_engine.py
src-tauri/python/engine/: __init__.py  common.py  evaluator.py  expression.py  mapping.py  runner.py  title.py
src-tauri/python/runtime/: README.md
src-tauri/src/: app_logger.rs  dataset_cache.rs  engine_backend.rs  lib.rs  xlsx_fallback.rs
src/api/: slogan.ts
src/composables/: useAppearanceSettings.ts  useImportSettings.ts  useOverflowMarquee.ts  useSlogan.ts  useUpdater.ts
src/constants/: mappingDefaults.ts
src/i18n/: index.ts
src/locales/: en-US.ts  zh-CN.ts
src/pages/: EngineRuleEditorPage.vue  MainPage.vue  MappingEditorPage.vue  RuleEditorPage.vue
src/router/: routes.ts
src/services/process/: fileOutput.ts  (+6 more)
src/store/: engineRuleStore.ts  historyStore.ts  index.ts  localeStore.ts  mappingStore.ts  ruleStore.ts  uiStore.ts
src/types/: engineRule.ts  history.ts  mapping.ts  rule.ts
src/utils/: engineRuleValidator.ts  http.ts  mappingParser.ts  nativeFile.ts  ruleTemplate.ts  ruleValidator.ts  spreadsheetParser.ts
(+10 files in other folders)
